--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -17,22 +17,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
-
-      - run: npm ci
-
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@client-api'
 
       - run: npm ci
 
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
